<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Register2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/form1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/F2"
            android:textColor="#000000"
            android:textSize="20sp"
            app:lineHeight="1.4dp" />

        <TextView
            android:id="@+id/judulName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Address"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Your Address"
            android:textColor="#4E4D4D"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/judulID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/City"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/idField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="City"
            android:textColor="#4E4D4D"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/judulPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/ZIP"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Zip Code"
            android:textColor="#4E4D4D"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/judulGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/IDc"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#e8e8e8"
            android:fontFamily="sans-serif"
            android:text="Upload Image"
            android:textAllCaps="false"
             />

        <TextView
            android:id="@+id/judulGender2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/CU"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#e8e8e8"
            android:fontFamily="sans-serif"
            android:text="Upload Image"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"

                android:text="@string/Back"
                android:textColor="@color/mainblue"
                android:textAllCaps="false"
                />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="190dp"
                android:layout_weight="1"
                android:background="#e8e8e8"
                android:text="@string/SV"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>