<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loan.AddLoanActivity">

    <LinearLayout
        android:id="@+id/addLoan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/judulNamaLoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Name"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/nameFieldLoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Your Full Name"
            android:inputType="textPersonName"
            android:textColor="#4E4D4D"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Amount"
            android:textColor="#000000"
            tools:ignore="MissingConstraints" />

        <me.abhinay.input.CurrencyEditText
            android:id="@+id/jumlahField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Loan Amount"
            android:inputType="number"
            android:textColor="#4E4D4D"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/judulObjective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Objective"
            android:textColor="#000000"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/objectiveField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Your Objective"
            android:inputType="text"
            android:textColor="#4E4D4D"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/judulLoanDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Date"
            android:textColor="#000000"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/loanDateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableEnd="@drawable/ic_calendar"
            android:ems="10"
            android:focusable="false"
            android:hint="Loan Date"
            android:inputType="date"
            android:textColor="#494949"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/Back"
                android:textColor="@color/mainblue" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/mainblue"
                android:text="@string/SV"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>